--- a/A1_13174267.ipynb
+++ b/A1_13174267.ipynb
@@ -51,7 +51,7 @@
         "\n",
         "## Submitted by: Akansha Patel (13174267)\n",
         "\n",
-        "## Available at : https://github.com/AkanshaPatel3004/ML2019_13174267/blob/master/A1_13174267.ipynb\n",
+        "### Available at : https://github.com/AkanshaPatel3004/ML2019_13174267/blob/master/A1_13174267.ipynb\n",
         "\n",
         "# Introduction:\n",
         "\n",
